update style index2

--- a/css/style.css
+++ b/css/style.css
@@ -54,4 +54,13 @@ p {
 
 footer.page-footer {
   margin: 0;
+  background-color : #971235;
+}
+
+.rojoCrossway{
+  background-color : #971235;
+}
+
+.rojoCrossway2{
+  color : #971235;
 }
